fix align center

--- a/_sass/solarized/solarized.scss
+++ b/_sass/solarized/solarized.scss
@@ -95,7 +95,7 @@ $quoteFont: 'droid_serifitalic', cursive;
   }
 
 	.reveal h1 {
-		text-align:left;
+		text-align:center;
 	}
 
 	.reveal h2,h3,h4,h5,h6,p {
